--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -9,24 +13,26 @@ table {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #213547;
 }
 
 button {
+  border:none;
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: .6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   font-family: inherit;
-  background-color: #f7f7f7;
+  background-color: #f2f2f2;
   cursor: pointer;
-  transition: border-color .25s
+  transition: border-color .25s;
 }
 
-button:hover {
-  border-color: #646cff
-}
 
-button:focus,button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color
+tbody tr {
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #00ccff;
+  }
 }
